spade-tests/src/snapshots/spade_tests__hir_lowering__argument_list_tests__signextending_to_shorter_value_single_bit.snap
---
source: spade-tests/src/hir_lowering.rs
---
fn main() -> int<1> {
    let a: int<2> = 0;
    let b: int<1> = std::num::sext(a);
    b
}


error: Expected M >= 2 but M is 1 
  ┌─ testinput:3:21
  │
3 │     let b: int<1> = std::num::sext(a);
  │                     ^^^^^^^^^^^^^^^^^ Expected M >= 2, but M is 1
  │
  = note: Sign-extend result must be wider than the input value
